--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     function showSummary(){
       choicesEl.innerHTML = '';
       feedback.className = 'feedback correct';
-      feedback.innerHTML = `<div class="message">Quiz tamamlandı 💐</div><div class="explain">Doğru sayısı: <b>${state.correct}</b><br>Yanlış sayısı: <b>${state.wrong}</b><br>Toplam: <b>${quiz.length}</b></div>`;
+      feedback.innerHTML = `<div class="message">Quiz tamamlandı 💐 Sonucunu bana gönder sana sürprizim var 𓆩❤︎𓆪 </div><div class="explain">Doğru sayısı: <b>${state.correct}</b><br>Yanlış sayısı: <b>${state.wrong}</b><br>Toplam: <b>${quiz.length}</b></div>`;
       question.textContent = 'Harikasın aşkım!';
       qnum.textContent = 'Sonuç';
       prog.style.width = '100%';
@@ -391,3 +391,4 @@
 </body>
 
 </html>
+
